2006-03-20  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c: Ensure that unusued opacity channel is set to opaque.
	* PerlMagick/t/input.art: New ART test image.
	* PerlMagick/t/input8.mat: New MATLAB test image (8-bit indexed).
	* PerlMagick/t/input_dbl.mat: New MATLAB test image (double grey)
	* PerlMagick/t/input_rgb.mat: New MATLAB test image (8-bit RGB)

2006-03-19  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c: Use symbolic constants rather than plain numbers
	so the module is more maintainable.  Correct the format for the
	day of the week.

2006-03-13  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c (WriteMATLABImage): Add RGB writer support for
	MATLAB format.

2006-03-11  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c (ReadMATImage): RGB support for MAT reader.

2006-03-02  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c: Fixes for observed crash.  Byte and word formats
	are working.

2006-02-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/environment.imdoc: MAGICK_FONT_PATH has not been supported
	since 1.1.  Remove mention of it!

2006-02-23  Mike Chiarappa  <mikechiarappa@libero.it>

	* BCBMagick: Updated to latest changes

2006-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): Properly compute image depth for
	16-bit SGI image files.

2006-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetExecutionPathUsingName): Search executable
	search path for binary.

2006-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage, WriteDPXImage): Alpha channel in DPX
	uses zero, or reference black, to represent an opaque pixel.

2006-01-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c (AllocateSemaphoreInfo): Allow semaphores to
	recurse on POSIX systems which support recursive semaphores but
	also warn if the semaphore recurses.