@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020060320"
+#define public MagickPackageVersionAddendum ".020060404"
 #define public MagickPackageReleaseDate "unreleased"
