@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2006-04-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/dpx.c (IMAGE_DATA_ROUNDING): Thanks to Steve Sloan for
+        noticing that 8K is 8192 rather than 8092.  Added a define to
+        allow tailoring the pixel data alignment boundary in case 8K is
+        not the right answer for some reason.
+
+</UL>
+<p>
 2006-03-20  Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
 
 <UL>
